--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx grunt && npx savepdf dist/",
-    "preview": "npx grunt && npx savepdf --preview dist/"
+    "build": "grunt && savepdf dist/ -s 148mm,210mm",
+    "preview": "grunt && savepdf dist/ -s 148mm,210mm --preview"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,8 @@
     "grunt-html-build": "^0.7.1",
     "grunt-markdown": "^0.7.0",
     "viola-savepdf": "^1.2.6"
+  },
+  "dependencies": {
+    "vivliostyle-savepdf": "^1.3.1"
   }
 }
